welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:6: error: not found: value nbBiscuit
      nbBiscuit = nbBiscuit + 1
      ^